fullSandbox11072023/force-app/main/default/objects/Demo__c/Demo__c.object-meta.xml
<CustomObject>
    <description>Tracks VPS machine demos.</description>
    <label>Demo/Trial</label>
    <nameField>
        <label>Demo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demos/Trials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>