fullSandbox11072023/force-app/main/default/objects/Demo__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Demo end date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>