fullSandbox11072023/force-app/main/default/objects/Demo__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates a demo to an Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Demos</relationshipLabel>
    <relationshipName>Demos</relationshipName>
    <type>Lookup</type>
</CustomField>