fullSandbox11072023/force-app/main/default/objects/Demo__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Demo start date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>