fullSandbox11072023/force-app/main/default/objects/Demo__c/fields/VPS_Console__c.field-meta.xml
<CustomField>
    <fullName>VPS_Console__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relate VPS Machines to Demos.</description>
    <label>VPS Console</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OwnerId</field>
            <operation>equals</operation>
            <valueField>VPS_Console__c.Approved_Rep__r.OwnerId</valueField>
        </filterItems>
        <filterItems>
            <field>VPS_Console__c.Unit_Status__c</field>
            <operation>notEqual</operation>
            <value>Deactivated</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>VPS_Console__c</referenceTo>
    <relationshipLabel>Demos</relationshipLabel>
    <relationshipName>Demos</relationshipName>
    <type>Lookup</type>
</CustomField>