fullSandbox11072023/force-app/main/default/objects/Demo__c/validationRules/Must_Select_a_VPS_Console.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Select_a_VPS_Console</fullName>
    <active>true</active>
    <description>Validation rule to force the user to select a VPS Unit to demo.</description>
    <errorConditionFormula>ISBLANK(  VPS_Console__r.Name  )</errorConditionFormula>
    <errorDisplayField>VPS_Console__c</errorDisplayField>
    <errorMessage>Please select a VPS Console for this demo.</errorMessage>
</ValidationRule>